chore: css updates and code refactor

--- a/index.html
+++ b/index.html
@@ -4,7 +4,18 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>AI Studio Simulation App</title>
+    <title>Modelia AI Fashion Model Generator</title>
+    <meta
+      name="description"
+      content="Upload a fashion image, add a style + prompt, and generate AI-powered model visuals with retries, abort, and history."
+    />
+    <meta name="theme-color" content="#a855f7" />
+    <meta property="og:title" content="Modelia AI Fashion Model Generator" />
+    <meta
+      property="og:description"
+      content="Generate styled AI fashion model images from your product photos."
+    />
+    <meta property="og:type" content="website" />
   </head>
   <body>
     <div id="root"></div>
